# surprise-memory

./: .gitignore  README.md  demo.py  memory_design.md  pyproject.toml
eval/: demo_vs_store_everything.py  locomo_eval.py  run_eval.py  synthetic.py
surprise_memory/: __init__.py  filters.py  memory.py  relevance_filter.py  store.py
tests/: test_memory.py
